--- a/busybee.html
+++ b/busybee.html
@@ -5,186 +5,209 @@
   <title>BusyBee – Productivity App | Julia Alix</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
+  <style>
+    body {
+      background: #faf8fc;
+      font-family: "Inter", sans-serif;
+      color: #2b2345;
+      padding: 0;
+      margin: 0;
+    }
+
+    .header-min {
+      width: 100%;
+      padding: 24px 0;
+      text-align: center;
+      font-weight: 600;
+      font-size: 1rem;
+      color: #2b2345;
+    }
+
+    .project-container {
+      max-width: 820px;
+      margin: 0 auto;
+      padding: 40px 24px 120px;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2.6rem;
+      margin-bottom: 0.4rem;
+      font-weight: 700;
+    }
+
+    .tags {
+      font-size: 0.95rem;
+      letter-spacing: 0.04em;
+      color: #7c6fa4;
+      margin-bottom: 2.5rem;
+    }
+
+    img.project-cover {
+      width: 100%;
+      border-radius: 28px;
+      margin-bottom: 3rem;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.06);
+    }
+
+    h2 {
+      font-size: 1.6rem;
+      font-weight: 600;
+      margin-top: 3rem;
+      margin-bottom: 1rem;
+    }
+
+    p, li {
+      font-size: 1.05rem;
+      line-height: 1.75;
+      color: #3d355c;
+    }
+
+    ul {
+      text-align: left;
+      max-width: 600px;
+      margin: 0 auto;
+      padding-left: 20px;
+      margin-bottom: 2rem;
+    }
+
+    /* Process icons */
+    .process-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 32px;
+      max-width: 600px;
+      margin: 2rem auto 3rem;
+    }
+
+    .process-step {
+      text-align: center;
+    }
+
+    .process-icon {
+      width: 52px;
+      height: 52px;
+      margin: 0 auto 14px;
+      padding: 12px;
+      border-radius: 14px;
+      background: #ffffff;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.06);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .process-icon svg {
+      width: 26px;
+      height: 26px;
+      stroke: #2b2345;
+      stroke-width: 1.8;
+      fill: none;
+    }
+
+    .figma-frame {
+      margin-top: 3rem;
+      border-radius: 24px;
+      overflow: hidden;
+      box-shadow: 0 18px 45px rgba(53,33,83,0.12);
+    }
+
+    iframe {
+      width: 100%;
+      height: 520px;
+      border: none;
+    }
+
+    .back-link {
+      display: block;
+      margin-top: 3rem;
+      font-size: 0.95rem;
+      color: #6e5ea1;
+      text-decoration: none;
+    }
+
+    .back-link:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
+
 <body>
 
-  <!-- Header -->
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="logo">
-        <span class="logo-mark"></span>
-        <span class="logo-text">Julia Alix</span>
-      </div>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="index.html#work">Work</a>
-        <a href="index.html#contact">Contact</a>
-      </nav>
-    </div>
-  </header>
+  <div class="header-min">Julia Alix</div>
 
-  <!-- Project Section -->
-  <section class="section">
-    <div class="container">
-      <h2>BusyBee – Productivity App</h2>
-      <p class="tags">UI Design • Mobile App • Prototype</p>
+  <div class="project-container">
 
-      <!-- Cover image -->
-      <img
-        src="Busybee_Cover.png"
-        alt="BusyBee productivity app cover"
-        style="margin-top:1rem; border-radius:24px; max-width:720px;"
-      />
+    <h1>BusyBee – Productivity App</h1>
+    <div class="tags">UI DESIGN • MOBILE APP • PROTOTYPE</div>
 
-      <div style="margin-top:1.5rem; max-width:720px;">
-        <h3>Overview</h3>
-        <p>
-          BusyBee is a productivity app that helps users stay on top of tasks,
-          manage their time, and keep focused using a bright, playful visual language.
-        </p>
+    <img src="Busybee_Cover.png" class="project-cover" alt="BusyBee Project Cover" />
 
-        <h3>My Role</h3>
-        <p>
-          UI design, visual direction, layout, and interaction design for the core screens.
-        </p>
+    <h2>Overview</h2>
+    <p>
+      BusyBee is a bright, bee-themed productivity app that helps users stay organized,
+      manage tasks efficiently, and maintain focus through a clean, friendly UI.
+    </p>
 
-        <h3>Goals</h3>
-        <ul>
-          <li>Keep the interface simple and friendly for everyday use.</li>
-          <li>Make task management feel light instead of overwhelming.</li>
-          <li>Use a strong, memorable color system to support the “bee” concept.</li>
-        </ul>
+    <h2>My Role</h2>
+    <p>UI design, visual direction, layout, and interaction design.</p>
 
-        <h3>Key Decisions</h3>
-        <ul>
-          <li>
-            Used a bold yellow base with strong contrast to make tasks and actions easy to scan.
-          </li>
-          <li>
-            Rounded shapes and soft shadows to keep the experience approachable and less “corporate”.
-          </li>
-          <li>
-            Clear typography hierarchy so priorities, deadlines, and next actions stand out at a glance.
-          </li>
-        </ul>
+    <h2>Goals</h2>
+    <ul>
+      <li>Create a simple and friendly everyday productivity experience</li>
+      <li>Make organization feel light instead of overwhelming</li>
+      <li>Use a memorable visual identity centered around the “bee” theme</li>
+    </ul>
 
-        <h3>Process</h3>
+    <h2>Key Decisions</h2>
+    <ul>
+      <li>Bold yellow palette with strong contrast for clarity</li>
+      <li>Rounded shapes and soft shadows for playfulness</li>
+      <li>Clear hierarchy so tasks and priorities are easy to scan</li>
+    </ul>
 
-        <div class="process-grid">
+    <h2>Process</h2>
 
-          <div class="process-step">
-            <div class="process-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M9 18h6m-5 3h4M12 2a7 7 0 0 0-7 7c0 2.9 1.7 5.4 4 6.6V17a1 1 0 0 0 1 1h4a1 1 0 0 0 1-1v-1.4c2.3-1.2 4-3.7 4-6.6a7 7 0 0 0-7-7Z"/>
-              </svg>
-            </div>
-            <h4>Understand the problem</h4>
-            <p>
-              Identified user pain points around task management and turned them into clear needs.
-            </p>
-          </div>
+    <div class="process-grid">
 
-          <div class="process-step">
-            <div class="process-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M12 2a6 6 0 0 0-6 6c0 2.4 1.4 4.5 3.4 5.4L9 18h6l-.4-4.6A6 6 0 0 0 18 8a6 6 0 0 0-6-6Z"/>
-              </svg>
-            </div>
-            <h4>Explore concepts</h4>
-            <p>
-              Explored different metaphors for productivity and selected the bee-themed direction.
-            </p>
-          </div>
-
-          <div class="process-step">
-            <div class="process-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M4 3h6v6H4V3Zm10 0h6v6h-6V3Zm-10 10h6v6H4v-6Zm10 0h6v6h-6v-6Z"/>
-              </svg>
-            </div>
-            <h4>Map flows & structure</h4>
-            <p>
-              Planned simple task flows for creating tasks, viewing today, and tracking progress.
-            </p>
-          </div>
-
-          <div class="process-step">
-            <div class="process-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M3 17l6-6m0 0l6 6m-6-6V3"/>
-              </svg>
-            </div>
-            <h4>Wireframe the screens</h4>
-            <p>
-              Created low-fidelity layouts to define structure and hierarchy before visuals.
-            </p>
-          </div>
-
-          <div class="process-step">
-            <div class="process-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M12 22a2 2 0 0 1-2-2V4a2 2 0 1 1 4 0v16a2 2 0 0 1-2 2Zm7-4V6a2 2 0 0 0-2-2h-1v16h1a2 2 0 0 0 2-2ZM7 20V4H6a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h1Z"/>
-              </svg>
-            </div>
-            <h4>Refine visual design</h4>
-            <p>
-              Finalized color palette, typography, and UI components to match the BusyBee brand.
-            </p>
-          </div>
-
-          <div class="process-step">
-            <div class="process-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M16 2H8a3 3 0 0 0-3 3v14a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3V5a3 3 0 0 0-3-3Zm-4 18.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Z"/>
-              </svg>
-            </div>
-            <h4>Build the prototype</h4>
-            <p>
-              Developed an interactive Figma prototype to test key flows and micro-interactions.
-            </p>
-          </div>
-
+      <div class="process-step">
+        <div class="process-icon">
+          <svg viewBox="0 0 24 24"><path d="M12 2a7 7 0 0 0-7 7c0 3 2 5.5 4 6.6V17a1 1 0 0 0 1 1h4a1 1 0 0 0 1-1v-1.4c2-1.1 4-3.6 4-6.6a7 7 0 0 0-7-7z"/></svg>
         </div>
+        <p>Understanding user needs</p>
       </div>
 
-      <!-- Figma embed -->
-      <div style="margin-top:2rem; max-width:900px;">
-        <h3>Interactive prototype</h3>
-        <p style="color:#6e628b; font-size:0.9rem;">
-          You can explore the prototype directly from Figma below.
-        </p>
-
-        <div style="margin-top:0.8rem; border-radius:24px; overflow:hidden; box-shadow:0 18px 45px rgba(53,33,83,0.12);">
-          <iframe
-            style="border:0; width:100%; height:520px;"
-            src="https://www.figma.com/proto/1Ezlj00vhgMC2QKL0pD3Mc/BusyBee-2023?node-id=5-2412&p=f&t=ecyi1yYCGOmV1qdK-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A3070"
-            allowfullscreen
-          ></iframe>
+      <div class="process-step">
+        <div class="process-icon">
+          <svg viewBox="0 0 24 24"><path d="M4 3h6v6H4V3Zm10 0h6v6h-6V3ZM4 13h6v6H4v-6Zm10 0h6v6h-6v-6Z"/></svg>
         </div>
-
-        <a
-          class="btn-pill"
-          href="https://www.figma.com/proto/1Ezlj00vhgMC2QKL0pD3Mc/BusyBee-2023?node-id=5-2412&p=f&t=ecyi1yYCGOmV1qdK-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A3070"
-          target="_blank"
-          style="margin-top:1.3rem; display:inline-block;"
-        >
-          Open in Figma →
-        </a>
+        <p>Mapping flows & structure</p>
       </div>
 
-      <div style="margin-top:2.5rem;">
-        <a href="index.html#work" style="font-size:0.9rem;">← Back to all projects</a>
+      <div class="process-step">
+        <div class="process-icon">
+          <svg viewBox="0 0 24 24"><path d="M3 17l6-6m0 0 6 6m-6-6V3"/></svg>
+        </div>
+        <p>Wireframing core screens</p>
       </div>
+
+      <div class="process-step">
+        <div class="process-icon">
+          <svg viewBox="0 0 24 24"><path d="M12 22a2 2 0 0 1-2-2V4a2 2 0 1 1 4 0v16a2 2 0 0 1-2 2Z"/></svg>
+        </div>
+        <p>Final UI & visual refinements</p>
+      </div>
+
     </div>
-  </section>
 
-  <footer class="footer">
-    <p>© <span id="year"></span> Julia Alix. All rights reserved.</p>
-  </footer>
+    <h2>Prototype</h2>
+    <div class="figma-frame">
+      <iframe src="https://www.figma.com/proto/1Ezlj00vhgMC2QKL0pD3Mc/BusyBee-2023?node-id=5-2412&p=f&t=ecyi1yYCGOmV1qdK-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A3070"></iframe>
+    </div>
 
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+    <a href="index.html#work" class="back-link">← Back to projects</a>
+
+  </div>
 
 </body>
 </html>
