--- a/index.html
+++ b/index.html
@@ -25,38 +25,27 @@
     </div>
   </header>
 
-  <!-- Hero Section with avatar -->
-  <section class="hero">
-    <div class="container hero-inner">
+ <section class="hero">
+  <div class="hero-content">
+    <div class="hero-label">SENIOR DESIGNER</div>
 
-      <!-- Left Side: Text -->
-      <div class="hero-text">
-        <p class="eyebrow">Senior Designer</p>
+    <h1>
+      Crafting UI Design,<br>
+      Branding, and Visuals to<br>
+      create fun, friendly and<br>
+      intentional experiences.
+    </h1>
 
-        <h1>
-          Crafting UI Design, Branding, and Visuals to create fun, friendly and intentional experiences. 
-        </h1>
+    <p class="hero-sub">
+      Great design goes beyond aesthetics—it's something people connect with.
+    </p>
+  </div>
 
-        <p class="hero-subtitle">
-          Great design goes beyond aesthetics—it’s something people connect with.
-        </p>
+  <div class="hero-image">
+    <img src="Avatar_Juju.png" alt="Julia Alix Avatar">
+  </div>
+</section>
 
-        <div class="hero-links">
-          <a href="#work">See my work</a>
-          <a href="#contact">Contact me</a>
-        </div>
-      </div>
-
-      <!-- Right Side: Avatar Image -->
-      <div class="hero-visual">
-        <img
-          src="Avatar_Juju.png"
-          alt="Avatar illustration of Julia Alix sitting on a crescent moon, waving while using a laptop."
-        />
-      </div>
-
-    </div>
-  </section>
 
   <!-- Selected Work -->
   <section id="work" class="section">
