--- a/index.html
+++ b/index.html
@@ -2,189 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>BusyBee – Productivity App | Julia Alix</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Julia Alix Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-  <!-- Header -->
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="logo">
-        <span class="logo-mark"></span>
-        <span class="logo-text">Julia Alix</span>
-      </div>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="index.html#work">Work</a>
-        <a href="index.html#contact">Contact</a>
+  <!-- Navigation Bar -->
+  <header>
+    <div class="container nav-wrapper">
+      <div class="logo">JULIA ALIX</div>
+      <nav>
+        <ul>
+          <li><a href="#projects">Work</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </nav>
     </div>
   </header>
 
-  <!-- Project Section -->
-  <section class="section">
-    <div class="container">
-      <h2>BusyBee – Productivity App</h2>
-      <p class="tags">UI Design • Mobile App • Prototype</p>
-
-      <!-- Cover image -->
-      <img
-        src="Busybee_Cover.png"
-        alt="BusyBee productivity app cover"
-        style="margin-top:1rem; border-radius:24px; max-width:720px;"
-      />
-
-      <div style="margin-top:1.5rem; max-width:720px;">
-        <h3>Overview</h3>
-        <p>
-          BusyBee is a productivity app that helps users stay on top of tasks,
-          manage their time, and keep focused using a bright, playful visual language.
-        </p>
-
-        <h3>My Role</h3>
-        <p>
-          UI design, visual direction, layout, and interaction design for the core screens.
-        </p>
-
-        <h3>Goals</h3>
-        <ul>
-          <li>Keep the interface simple and friendly for everyday use.</li>
-          <li>Make task management feel light instead of overwhelming.</li>
-          <li>Use a strong, memorable color system to support the “bee” concept.</li>
-        </ul>
-
-        <h3>Key Decisions</h3>
-        <ul>
-          <li>
-            Used a bold yellow base with strong contrast to make tasks and actions easy to scan.
-          </li>
-          <li>
-            Rounded shapes and soft shadows to keep the experience approachable and less “corporate”.
-          </li>
-          <li>
-            Clear typography hierarchy so priorities, deadlines, and next actions stand out at a glance.
-          </li>
-        </ul>
-
-        <h3>Process</h3>
-
-        <div class="process-grid">
-
-          <div class="process-step">
-            <div class="process-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M9 18h6m-5 3h4M12 2a7 7 0 0 0-7 7c0 2.9 1.7 5.4 4 6.6V17a1 1 0 0 0 1 1h4a1 1 0 0 0 1-1v-1.4c2.3-1.2 4-3.7 4-6.6a7 7 0 0 0-7-7Z"/>
-              </svg>
-            </div>
-            <h4>Understand the problem</h4>
-            <p>
-              Identified user pain points around task management and turned them into clear needs.
-            </p>
-          </div>
-
-          <div class="process-step">
-            <div class="process-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M12 2a6 6 0 0 0-6 6c0 2.4 1.4 4.5 3.4 5.4L9 18h6l-.4-4.6A6 6 0 0 0 18 8a6 6 0 0 0-6-6Z"/>
-              </svg>
-            </div>
-            <h4>Explore concepts</h4>
-            <p>
-              Explored different metaphors for productivity and selected the bee-themed direction.
-            </p>
-          </div>
-
-          <div class="process-step">
-            <div class="process-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M4 3h6v6H4V3Zm10 0h6v6h-6V3Zm-10 10h6v6H4v-6Zm10 0h6v6h-6v-6Z"/>
-              </svg>
-            </div>
-            <h4>Map flows & structure</h4>
-            <p>
-              Planned simple task flows for creating tasks, viewing today, and tracking progress.
-            </p>
-          </div>
-
-          <div class="process-step">
-            <div class="process-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M3 17l6-6m0 0l6 6m-6-6V3"/>
-              </svg>
-            </div>
-            <h4>Wireframe the screens</h4>
-            <p>
-              Created low-fidelity layouts to define structure and hierarchy before visuals.
-            </p>
-          </div>
-
-          <div class="process-step">
-            <div class="process-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M12 22a2 2 0 0 1-2-2V4a2 2 0 1 1 4 0v16a2 2 0 0 1-2 2Zm7-4V6a2 2 0 0 0-2-2h-1v16h1a2 2 0 0 0 2-2ZM7 20V4H6a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h1Z"/>
-              </svg>
-            </div>
-            <h4>Refine visual design</h4>
-            <p>
-              Finalized color palette, typography, and UI components to match the BusyBee brand.
-            </p>
-          </div>
-
-          <div class="process-step">
-            <div class="process-icon">
-              <svg viewBox="0 0 24 24">
-                <path d="M16 2H8a3 3 0 0 0-3 3v14a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3V5a3 3 0 0 0-3-3Zm-4 18.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Z"/>
-              </svg>
-            </div>
-            <h4>Build the prototype</h4>
-            <p>
-              Developed an interactive Figma prototype to test key flows and micro-interactions.
-            </p>
-          </div>
-
-        </div>
+  <!-- Hero Section -->
+  <section id="hero">
+    <div class="container hero-container">
+      <div class="hero-text">
+        <h1>Crafting UI Design, Branding, and Visuals to create fun, friendly and intentional experiences.</h1>
+        <p>Hello! I'm Julia Alix, a creative designer passionate about clean and engaging visual design.</p>
       </div>
-
-      <!-- Figma embed -->
-      <div style="margin-top:2rem; max-width:900px;">
-        <h3>Interactive prototype</h3>
-        <p style="color:#6e628b; font-size:0.9rem;">
-          You can explore the prototype directly from Figma below.
-        </p>
-
-        <div style="margin-top:0.8rem; border-radius:24px; overflow:hidden; box-shadow:0 18px 45px rgba(53,33,83,0.12);">
-          <iframe
-            style="border:0; width:100%; height:520px;"
-            src="https://www.figma.com/proto/1Ezlj00vhgMC2QKL0pD3Mc/BusyBee-2023?node-id=5-2412&p=f&t=ecyi1yYCGOmV1qdK-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A3070"
-            allowfullscreen
-          ></iframe>
-        </div>
-
-        <a
-          class="btn-pill"
-          href="https://www.figma.com/proto/1Ezlj00vhgMC2QKL0pD3Mc/BusyBee-2023?node-id=5-2412&p=f&t=ecyi1yYCGOmV1qdK-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=5%3A3070"
-          target="_blank"
-          style="margin-top:1.3rem; display:inline-block;"
-        >
-          Open in Figma →
-        </a>
-      </div>
-
-      <div style="margin-top:2.5rem;">
-        <a href="index.html#work" style="font-size:0.9rem;">← Back to all projects</a>
+      <div class="hero-image">
+        <img src="avatar.png" alt="Avatar of Julia Alix" />
       </div>
     </div>
   </section>
 
-  <footer class="footer">
-    <p>© <span id="year"></span> Julia Alix. All rights reserved.</p>
-  </footer>
+  <!-- Projects Section -->
+  <section id="projects">
+    <div class="container">
+      <h2>Featured Projects</h2>
+      <div class="projects-grid">
+        <div class="project-card fade-up">
+          <img src="Busybee_Cover.png" alt="BusyBee project cover" />
+          <div class="project-info">
+            <h3>BusyBee</h3>
+            <p>A mobile productivity app for organizing and managing tasks efficiently.</p>
+            <p class="tags"><span>UI Design</span><span>Mobile App</span></p>
+            <a href="busybee.html" class="project-link">View Project</a>
+          </div>
+        </div>
+        <div class="project-card fade-up">
+          <img src="Digibot_Cover.png" alt="DigiBot project cover" />
+          <div class="project-info">
+            <h3>DigiBot</h3>
+            <p>A modern branding and chatbot UI solution.</p>
+            <p class="tags"><span>Branding</span><span>Web App</span></p>
+            <a href="digibot.html" class="project-link">View Project</a>
+          </div>
+        </div>
+        <div class="project-card fade-up">
+          <img src="Unamarket_cover.png" alt="UnaMarket project cover" />
+          <div class="project-info">
+            <h3>UnaMarket</h3>
+            <p>E-commerce UI concept for seller landing page and dashboard.</p>
+            <p class="tags"><span>UI Design</span><span>E-commerce</span></p>
+            <a href="unamarket.html" class="project-link">View Project</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+  <!-- About Me Section -->
+  <section id="about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>I’m Julia, a UX/UI and visual designer based in Quezon City. I specialize in crafting friendly, purposeful, and fun designs across web, branding, and graphics.</p>
+    </div>
+  </section>
 
+  <!-- Contact Section -->
+  <section id="contact">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Let’s work together! <a href="mailto:juliaalix@example.com">Send me an email</a></p>
+    </div>
+  </section>
 </body>
 </html>
