--- a/index.html
+++ b/index.html
@@ -2,88 +2,178 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Julia Alix – Senior Designer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Julia Alix Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-  <!-- Navigation Bar -->
-  <header>
-    <div class="container nav-wrapper">
-      <div class="logo">JULIA ALIX</div>
-      <nav>
-        <ul>
-          <li><a href="#projects">Work</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+
+  <!-- Top Navigation -->
+  <header class="site-header">
+    <div class="container header-inner">
+      <div class="logo">
+        <span class="logo-mark"></span>
+        <span class="logo-text">Julia Alix</span>
+      </div>
+
+      <nav class="nav">
+        <a href="#work">Work</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
       </nav>
     </div>
   </header>
 
-  <!-- Hero Section -->
-  <section id="hero">
-    <div class="container hero-container">
-      <div class="hero-text">
-        <h1>Crafting UI Design, Branding, and Visuals to create fun, friendly and intentional experiences.</h1>
-        <p>Hello! I'm Julia Alix, a creative designer passionate about clean and engaging visual design.</p>
-      </div>
-      <div class="hero-image">
-        <img src="avatar.png" alt="Avatar of Julia Alix" />
-      </div>
+ <section class="hero">
+  <div class="hero-content">
+    <div class="hero-label">SENIOR DESIGNER</div>
+
+    <h1>
+      Crafting UI Design,<br>
+      Branding, and Visuals to<br>
+      create fun, friendly and<br>
+      intentional experiences.
+    </h1>
+
+    <p class="hero-sub">
+      Great design goes beyond aesthetics—it's something people connect with.
+    </p>
+  </div>
+
+  <div class="hero-image">
+    <img src="Avatar_Juju.png" alt="Julia Alix Avatar">
+  </div>
+</section>
+
+
+  <!-- Selected Work -->
+  <section id="work" class="section">
+  <div class="container">
+    <h2>Check out my works!</h2>
+    <p>A few of the projects I’ve been working on recently.</p>
+
+    <div class="grid">
+
+    <!-- BusyBee – Productivity App -->
+<article class="project">
+  <img src="Busybee_Cover.png" alt="BusyBee productivity app cover" />
+
+  <h3>BusyBee – Productivity App</h3>
+  <p>
+    A bright, bee-themed productivity app that helps users organize tasks,
+    manage time efficiently, and stay focused through a clean, friendly UI.
+  </p>
+
+  <p class="tags">UI Design • Mobile App • Prototype</p>
+
+  <!-- change href to busybee.html -->
+  <a class="btn-pill" href="busybee.html">
+    View case study →
+  </a>
+</article>
+
+
+      <!-- DigiBot – Application -->
+      <article class="project">
+        <img
+          src="Digibot_Cover.png"
+          alt="Digibot application cover – two people collaborating at a desk"
+          style="width:100%; border-radius:20px; margin-bottom:12px;"
+        />
+
+        <h3>DigiBot – Application</h3>
+        <p>
+          A vibrant concept focused on digital creativity and collaboration,
+          with a bold color palette and playful illustration-led UI.
+        </p>
+
+        <p class="tags">UI Design • Branding • Web App</p>
+
+       <a class="btn-pill" href="digibot.html">View case study →</a>
+      </article>
+
+      <!-- UnaMarket – Seller’s Landing Page -->
+      <article class="project">
+        <img
+          src="Unamarket_cover.png"
+          alt="UnaMarket seller's landing page cover – logo and illustration of a seller at a laptop"
+          style="width:100%; border-radius:20px; margin-bottom:12px;"
+        />
+
+        <h3>UnaMarket – Seller’s Landing Page</h3>
+        <p>
+          A clean, friendly marketplace landing page designed for sellers,
+          focusing on clarity, trust, and simple onboarding.
+        </p>
+
+        <p class="tags">UI Design • Web • Landing Page</p>
+
+       <a class="btn-pill" href="unamarket.html">View case study →</a>
+      </article>
+
+    </div>
+  </div>
+</section>
+
+
+  <!-- About -->
+  <section id="about" class="section">
+    <div class="container">
+      <h2>Hey there!</h2>
+      <p>
+       <h3><b>I’m Julia! </b></h3>
+        Im currently a Senior Designer with eight years of experience, I have a good track record working with international clients under different industries like Print, Digital Design and, Web design.
+        Creativity has always been my comfort zone—it’s what pushed me to study Arts and Design and eventually turn it into a career.
+      </p>
+      <p>I’ve always enjoyed exploring different corners of the design industry, learning and adapting as everything evolves. Right now Im into Frontend development.
+        And honestly, what makes me happiest is creating designs that feel clear and easy for people to use—work
+        that makes them not notice the process they are in because they instantly get what they’re looking at or what they need to do.
+      </p>
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects">
+  <!-- Contact -->
+  <section id="contact" class="section">
     <div class="container">
-      <h2>Featured Projects</h2>
-      <div class="projects-grid">
-        <div class="project-card fade-up">
-          <img src="Busybee_Cover.png" alt="BusyBee project cover" />
-          <div class="project-info">
-            <h3>BusyBee</h3>
-            <p>A mobile productivity app for organizing and managing tasks efficiently.</p>
-            <p class="tags"><span>UI Design</span><span>Mobile App</span></p>
-            <a href="busybee.html" class="project-link">View Project</a>
-          </div>
-        </div>
-        <div class="project-card fade-up">
-          <img src="Digibot_Cover.png" alt="DigiBot project cover" />
-          <div class="project-info">
-            <h3>DigiBot</h3>
-            <p>A modern branding and chatbot UI solution.</p>
-            <p class="tags"><span>Branding</span><span>Web App</span></p>
-            <a href="digibot.html" class="project-link">View Project</a>
-          </div>
-        </div>
-        <div class="project-card fade-up">
-          <img src="Unamarket_cover.png" alt="UnaMarket project cover" />
-          <div class="project-info">
-            <h3>UnaMarket</h3>
-            <p>E-commerce UI concept for seller landing page and dashboard.</p>
-            <p class="tags"><span>UI Design</span><span>E-commerce</span></p>
-            <a href="unamarket.html" class="project-link">View Project</a>
-          </div>
-        </div>
-      </div>
+      <h2>Let’s work together!</h2>
+      <p>Open to freelance projects, collaborations, and full-time design opportunities.</p>
+
+      <ul class="links-list">
+        <li><a href="mailto:youremail@email.com">youremail@email.com</a></li>
+        <li><a href="#" target="_blank">Behance</a></li>
+        <li><a href="#" target="_blank">Dribbble</a></li>
+        <li><a href="#" target="_blank">Instagram</a></li>
+      </ul>
     </div>
   </section>
 
-  <!-- About Me Section -->
-  <section id="about">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>I’m Julia, a UX/UI and visual designer based in Quezon City. I specialize in crafting friendly, purposeful, and fun designs across web, branding, and graphics.</p>
-    </div>
-  </section>
+    <footer class="footer">
+    <p>© <span id="year"></span> Julia Jasmin Alix. All rights reserved.</p>
+  </footer>
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <div class="container">
-      <h2>Contact</h2>
-      <p>Let’s work together! <a href="mailto:juliaalix@example.com">Send me an email</a></p>
-    </div>
-  </section>
+  <script>
+    // Set current year
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    // Scroll animation for project cards
+    const cards = document.querySelectorAll(".project");
+
+    const observer = new IntersectionObserver(
+      (entries, obs) => {
+        entries.forEach((entry) => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add("in-view");
+            obs.unobserve(entry.target);
+          }
+        });
+      },
+      { threshold: 0.2 }
+    );
+
+    cards.forEach((card) => observer.observe(card));
+  </script>
+
+
 </body>
 </html>
