--- a/index.html
+++ b/index.html
@@ -25,26 +25,29 @@
     </div>
   </header>
 
- <section class="hero">
-  <div class="hero-content">
-    <div class="hero-label">SENIOR DESIGNER</div>
+<section class="hero">
+  <div class="hero-inner">
+    <div class="hero-content">
+      <div class="hero-label">SENIOR DESIGNER</div>
 
-    <h1>
-      Crafting UI Design,<br>
-      Branding, and Visuals to<br>
-      create fun, friendly and<br>
-      intentional experiences.
-    </h1>
+      <h1>
+        Crafting UI Design,<br>
+        Branding, and Visuals to<br>
+        create fun, friendly and<br>
+        intentional experiences.
+      </h1>
 
-    <p class="hero-sub">
-      Great design goes beyond aesthetics—it's something people connect with.
-    </p>
-  </div>
+      <p class="hero-sub">
+        Great design goes beyond aesthetics—it's something people connect with.
+      </p>
+    </div>
 
-  <div class="hero-image">
-    <img src="Avatar_Juju.png" alt="Julia Alix Avatar">
+    <div class="hero-image">
+      <img src="Avatar_Juju.png" alt="Julia Alix Avatar">
+    </div>
   </div>
 </section>
+
 
 
   <!-- Selected Work -->
