--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
   </header>
 
-<section class="hero">
+<<section class="hero">
   <div class="hero-inner">
     <div class="hero-content">
       <div class="hero-label">SENIOR DESIGNER</div>
@@ -47,6 +47,7 @@
     </div>
   </div>
 </section>
+
 
 
 
