--- a/index.html
+++ b/index.html
@@ -25,115 +25,76 @@
     </div>
   </header>
 
-<section class="hero">
-  <div class="hero-inner">
-    <div class="hero-content">
-      <div class="hero-label">SENIOR DESIGNER</div>
+  <!-- Hero Section (Updated) -->
+  <section class="hero">
+    <div class="container hero-flex">
+      <div class="hero-content">
+        <div class="hero-label">SENIOR DESIGNER</div>
 
-      <h1>
-        Crafting UI Design,<br>
-        Branding, and Visuals to<br>
-        create fun, friendly and<br>
-        intentional experiences.
-      </h1>
+        <h1>
+          Crafting UI Design,<br />
+          Branding, and Visuals to<br />
+          create fun, friendly and<br />
+          intentional experiences.
+        </h1>
 
-      <p class="hero-sub">
-        Great design goes beyond aesthetics—it's something people connect with.
-      </p>
+        <p class="hero-sub">
+          Great design goes beyond aesthetics—it's something people connect with.
+        </p>
+      </div>
+
+      <div class="hero-avatar">
+        <img src="Avatar_Juju.png" alt="Julia Alix Avatar" />
+      </div>
     </div>
-
-    <div class="hero-image">
-      <img src="Avatar_Juju.png" alt="Julia Alix Avatar">
-    </div>
-  </div>
-</section>
-
-
-
+  </section>
 
   <!-- Selected Work -->
   <section id="work" class="section">
-  <div class="container">
-    <h2>Check out my works!</h2>
-    <p>A few of the projects I’ve been working on recently.</p>
+    <div class="container">
+      <h2>Check out my works!</h2>
+      <p>A few of the projects I’ve been working on recently.</p>
 
-    <div class="grid">
+      <div class="grid">
 
-    <!-- BusyBee – Productivity App -->
-<article class="project">
-  <img src="Busybee_Cover.png" alt="BusyBee productivity app cover" />
+        <!-- BusyBee – Productivity App -->
+        <article class="project">
+          <img src="Busybee_Cover.png" alt="BusyBee productivity app cover" />
+          <h3>BusyBee – Productivity App</h3>
+          <p>A bright, bee-themed productivity app that helps users organize tasks, manage time efficiently, and stay focused through a clean, friendly UI.</p>
+          <p class="tags">UI Design • Mobile App • Prototype</p>
+          <a class="btn-pill" href="busybee.html">View case study →</a>
+        </article>
 
-  <h3>BusyBee – Productivity App</h3>
-  <p>
-    A bright, bee-themed productivity app that helps users organize tasks,
-    manage time efficiently, and stay focused through a clean, friendly UI.
-  </p>
+        <!-- DigiBot – Application -->
+        <article class="project">
+          <img src="Digibot_Cover.png" alt="Digibot application cover" style="width:100%; border-radius:20px; margin-bottom:12px;" />
+          <h3>DigiBot – Application</h3>
+          <p>A vibrant concept focused on digital creativity and collaboration, with a bold color palette and playful illustration-led UI.</p>
+          <p class="tags">UI Design • Branding • Web App</p>
+          <a class="btn-pill" href="digibot.html">View case study →</a>
+        </article>
 
-  <p class="tags">UI Design • Mobile App • Prototype</p>
+        <!-- UnaMarket – Seller’s Landing Page -->
+        <article class="project">
+          <img src="Unamarket_cover.png" alt="UnaMarket seller's landing page cover" style="width:100%; border-radius:20px; margin-bottom:12px;" />
+          <h3>UnaMarket – Seller’s Landing Page</h3>
+          <p>A clean, friendly marketplace landing page designed for sellers, focusing on clarity, trust, and simple onboarding.</p>
+          <p class="tags">UI Design • Web • Landing Page</p>
+          <a class="btn-pill" href="unamarket.html">View case study →</a>
+        </article>
 
-  <!-- change href to busybee.html -->
-  <a class="btn-pill" href="busybee.html">
-    View case study →
-  </a>
-</article>
-
-
-      <!-- DigiBot – Application -->
-      <article class="project">
-        <img
-          src="Digibot_Cover.png"
-          alt="Digibot application cover – two people collaborating at a desk"
-          style="width:100%; border-radius:20px; margin-bottom:12px;"
-        />
-
-        <h3>DigiBot – Application</h3>
-        <p>
-          A vibrant concept focused on digital creativity and collaboration,
-          with a bold color palette and playful illustration-led UI.
-        </p>
-
-        <p class="tags">UI Design • Branding • Web App</p>
-
-       <a class="btn-pill" href="digibot.html">View case study →</a>
-      </article>
-
-      <!-- UnaMarket – Seller’s Landing Page -->
-      <article class="project">
-        <img
-          src="Unamarket_cover.png"
-          alt="UnaMarket seller's landing page cover – logo and illustration of a seller at a laptop"
-          style="width:100%; border-radius:20px; margin-bottom:12px;"
-        />
-
-        <h3>UnaMarket – Seller’s Landing Page</h3>
-        <p>
-          A clean, friendly marketplace landing page designed for sellers,
-          focusing on clarity, trust, and simple onboarding.
-        </p>
-
-        <p class="tags">UI Design • Web • Landing Page</p>
-
-       <a class="btn-pill" href="unamarket.html">View case study →</a>
-      </article>
-
+      </div>
     </div>
-  </div>
-</section>
-
+  </section>
 
   <!-- About -->
   <section id="about" class="section">
     <div class="container">
       <h2>Hey there!</h2>
-      <p>
-       <h3><b>I’m Julia! </b></h3>
-        Im currently a Senior Designer with eight years of experience, I have a good track record working with international clients under different industries like Print, Digital Design and, Web design.
-        Creativity has always been my comfort zone—it’s what pushed me to study Arts and Design and eventually turn it into a career.
-      </p>
-      <p>I’ve always enjoyed exploring different corners of the design industry, learning and adapting as everything evolves. Right now Im into Frontend development.
-        And honestly, what makes me happiest is creating designs that feel clear and easy for people to use—work
-        that makes them not notice the process they are in because they instantly get what they’re looking at or what they need to do.
-      </p>
+      <h3><b>I’m Julia!</b></h3>
+      <p>I'm currently a Senior Designer with eight years of experience, I have a good track record working with international clients under different industries like Print, Digital Design, and Web design. Creativity has always been my comfort zone—it’s what pushed me to study Arts and Design and eventually turn it into a career.</p>
+      <p>I’ve always enjoyed exploring different corners of the design industry, learning and adapting as everything evolves. Right now I'm into Frontend development. And honestly, what makes me happiest is creating designs that feel clear and easy for people to use—work that makes them not notice the process they are in because they instantly get what they’re looking at or what they need to do.</p>
     </div>
   </section>
 
@@ -142,7 +103,6 @@
     <div class="container">
       <h2>Let’s work together!</h2>
       <p>Open to freelance projects, collaborations, and full-time design opportunities.</p>
-
       <ul class="links-list">
         <li><a href="mailto:youremail@email.com">youremail@email.com</a></li>
         <li><a href="#" target="_blank">Behance</a></li>
@@ -152,17 +112,15 @@
     </div>
   </section>
 
-    <footer class="footer">
+  <!-- Footer -->
+  <footer class="footer">
     <p>© <span id="year"></span> Julia Jasmin Alix. All rights reserved.</p>
   </footer>
 
   <script>
-    // Set current year
     document.getElementById("year").textContent = new Date().getFullYear();
 
-    // Scroll animation for project cards
     const cards = document.querySelectorAll(".project");
-
     const observer = new IntersectionObserver(
       (entries, obs) => {
         entries.forEach((entry) => {
@@ -174,10 +132,8 @@
       },
       { threshold: 0.2 }
     );
-
     cards.forEach((card) => observer.observe(card));
   </script>
-
 
 </body>
 </html>
