--- a/index.html
+++ b/index.html
@@ -27,27 +27,26 @@
 
   <!-- Hero Section (Updated) -->
   <section class="hero">
-    <div class="container hero-flex">
-      <div class="hero-content">
-        <div class="hero-label">SENIOR DESIGNER</div>
-
-        <h1>
-          Crafting UI Design,<br />
-          Branding, and Visuals to<br />
-          create fun, friendly and<br />
-          intentional experiences.
-        </h1>
-
-        <p class="hero-sub">
-          Great design goes beyond aesthetics—it's something people connect with.
-        </p>
-      </div>
-
-      <div class="hero-avatar">
-        <img src="Avatar_Juju.png" alt="Julia Alix Avatar" />
-      </div>
+  <div class="container hero-flex">
+    <div class="hero-content">
+      <div class="hero-label">SENIOR DESIGNER</div>
+      <h1>
+        Crafting UI Design,<br>
+        Branding, and Visuals to<br>
+        create fun, friendly and<br>
+        intentional experiences.
+      </h1>
+      <p class="hero-sub">
+        Great design goes beyond aesthetics—it's something people connect with.
+      </p>
     </div>
-  </section>
+
+    <div class="hero-avatar">
+      <img src="Avatar_Juju.png" alt="Julia Alix Avatar" />
+    </div>
+  </div>
+</section>
+
 
   <!-- Selected Work -->
   <section id="work" class="section">
