--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <img src="Busybee_Cover.png" alt="BusyBee productivity app cover" />
           <h3>BusyBee – Productivity App</h3>
           <p>A bright, bee-themed productivity app that helps users organize tasks, manage time efficiently, and stay focused through a clean, friendly UI.</p>
-          <p class="tags">UI Design • Mobile App • Prototype</p>
+          <p class="tags">UI Design • Mobile App </p>
           <a class="btn-pill" href="busybee.html">View case study →</a>
         </article>
 
@@ -70,7 +70,7 @@
           <img src="Digibot_Cover.png" alt="Digibot application cover" style="width:100%; border-radius:20px; margin-bottom:12px;" />
           <h3>DigiBot – Application</h3>
           <p>A vibrant concept focused on digital creativity and collaboration, with a bold color palette and playful illustration-led UI.</p>
-          <p class="tags">UI Design • Branding • Web App</p>
+          <p class="tags">UI Design • Web App</p>
           <a class="btn-pill" href="digibot.html">View case study →</a>
         </article>
 
@@ -79,7 +79,7 @@
           <img src="Unamarket_cover.png" alt="UnaMarket seller's landing page cover" style="width:100%; border-radius:20px; margin-bottom:12px;" />
           <h3>UnaMarket – Seller’s Landing Page</h3>
           <p>A clean, friendly marketplace landing page designed for sellers, focusing on clarity, trust, and simple onboarding.</p>
-          <p class="tags">UI Design • Web • Landing Page</p>
+          <p class="tags">UI Design • Landing Page</p>
           <a class="btn-pill" href="unamarket.html">View case study →</a>
         </article>
 
