--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <article class="project">
           <img src="Unamarket_cover.png" alt="UnaMarket seller's landing page cover" style="width:100%; border-radius:20px; margin-bottom:12px;" />
           <h3>UnaMarket – Seller’s Landing Page</h3>
-          <p>A clean, friendly marketplace landing page designed for sellers, focusing on clarity, trust, and simple onboarding.</p>
+          <p>A Friendly marketplace landing page designed for onboarding sellers</p>
           <p class="tags">UI Design • Landing Page</p>
           <a class="btn-pill" href="unamarket.html">View case study →</a>
         </article>
