--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- DigiBot – Application -->
         <article class="project">
           <img src="Digibot_Cover.png" alt="Digibot application cover" style="width:100%; border-radius:20px; margin-bottom:12px;" />
-          <h3>DigiBot – Application</h3>
+          <h3>DigiBot - Creative Services</h3>
           <p>A vibrant concept focused on digital creativity and collaboration, with a bold color palette and playful illustration-led UI.</p>
           <p class="tags">UI Design • Web App</p>
           <a class="btn-pill" href="digibot.html">View case study →</a>
@@ -77,7 +77,7 @@
         <!-- UnaMarket – Seller’s Landing Page -->
         <article class="project">
           <img src="Unamarket_cover.png" alt="UnaMarket seller's landing page cover" style="width:100%; border-radius:20px; margin-bottom:12px;" />
-          <h3>UnaMarket – Seller’s Landing Page</h3>
+          <h3>UnaMarket – Seller's Page</h3>
           <p>A Friendly marketplace landing page designed for onboarding sellers</p>
           <p class="tags">UI Design • Landing Page</p>
           <a class="btn-pill" href="unamarket.html">View case study →</a>
