--- a/digibot.html
+++ b/digibot.html
@@ -1,58 +1,320 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DIGIBOT | My Portfolio</title>
-  <!-- Link to external CSS (same stylesheet as index.html) -->
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <!-- Ensure responsive design on mobile devices :contentReference[oaicite:0]{index=0} -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
+  <title>DigiBot – Project Case Study</title>
+
+  <!-- Google Font (matching BusyBee typography) -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+  <!-- Bootstrap Icons (for line-style icons in Process section):contentReference[oaicite:1]{index=1} -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+  <style>
+    /* Root variables for color palette (matching BusyBee aesthetic) */
+    :root {
+      --accent-color: #F7B500;  /* example accent color (golden yellow) */
+      --text-color: #333;
+      --bg-color: #fff;
+    }
+
+    /* Base styling */
+    body {
+      margin: 0;
+      font-family: 'Montserrat', sans-serif;
+      background: var(--bg-color);
+      color: var(--text-color);
+      line-height: 1.6;
+      scroll-behavior: smooth;  /* Enable smooth scrolling for anchor links :contentReference[oaicite:2]{index=2} */
+    }
+    h1, h2, h3 {
+      margin: 0 0 15px;
+      font-weight: 700;
+    }
+    p, ul {
+      margin: 0 0 20px;
+    }
+    ul { padding-left: 20px; }
+    li { margin-bottom: 5px; }
+
+    /* Container: centers content and limits width */
+    .container {
+      width: 90%;
+      max-width: 1200px;
+      margin: auto;
+      padding: 0 20px;
+    }
+
+    /* Section spacing */
+    section {
+      padding: 60px 0;
+    }
+    header.hero {
+      padding: 100px 0 60px; /* extra top padding for hero section */
+    }
+
+    /* Hero section */
+    .hero h1 {
+      font-size: 2.5em;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    .hero-images {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      align-items: center;
+    }
+    .hero-images img {
+      /* Two side-by-side images; adjust width as needed */
+      flex: 1 1 45%;
+      max-width: 45%;
+      height: auto;
+      background: #ccc;  /* gray placeholder background */
+    }
+
+    /* Introduction section (three points) */
+    .intro-points {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      justify-content: space-between;
+    }
+    .intro-point {
+      flex: 1 1 calc((100% - 60px) / 3); /* 3 columns, accounting for gaps */
+    }
+    .intro-point h3 {
+      font-size: 1.3em;
+      margin-bottom: 10px;
+      color: var(--accent-color);
+    }
+
+    /* Process section */
+    .process-steps {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      justify-content: space-between;
+      text-align: center;
+    }
+    .process-step {
+      flex: 1 1 calc((100% - 60px) / 3);
+      padding: 20px 15px;
+      background: #f9f9f9;
+      border-radius: 8px;
+    }
+    .process-step i.bi {
+      font-size: 2rem;
+      color: var(--accent-color);
+      margin-bottom: 10px;
+    }
+    .process-step h3 {
+      font-size: 1.2em;
+      margin-bottom: 8px;
+    }
+    .process-step p {
+      font-size: 0.95em;
+      margin: 0;
+    }
+
+    /* Design Samples section */
+    .design-samples .section-title {
+      text-align: center;
+      font-size: 1.8em;
+      margin-bottom: 40px;
+      position: relative;
+    }
+    .design-samples .section-title::after {
+      content: "";
+      display: block;
+      width: 60px;
+      height: 4px;
+      background: var(--accent-color);
+      margin: 8px auto 0;
+    }
+    .sample-links {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      margin-bottom: 30px;
+    }
+    .sample-box {
+      flex: 1 1 200px;
+      max-width: 200px;
+      background: #f0f0f0;
+      color: var(--text-color);
+      text-align: center;
+      text-decoration: none;
+      padding: 15px;
+      border-radius: 5px;
+      font-weight: 600;
+      transition: background 0.3s;
+    }
+    .sample-box:hover {
+      background: #e0e0e0;
+    }
+    .sample-previews {
+      /* container for the preview images */
+      display: flex;
+      flex-wrap: wrap;
+      gap: 40px;
+      justify-content: center;
+    }
+    .sample-preview {
+      width: 100%;
+      max-width: 350px;
+      text-align: center;
+    }
+    .sample-preview h4 {
+      font-size: 1.1em;
+      margin-bottom: 10px;
+    }
+    .sample-preview img {
+      width: 100%;
+      height: auto;
+      background: #ccc;
+      border: 2px dashed #bbb;  /* dashed border to signify placeholder */
+    }
+
+    /* Prototype section */
+    .prototype h2 {
+      text-align: center;
+      font-size: 1.8em;
+      margin-bottom: 30px;
+    }
+    .prototype img {
+      display: block;
+      width: 100%;
+      max-width: 800px;
+      height: auto;
+      margin: 0 auto;
+      background: #ccc;
+    }
+
+    /* Responsive Design: 3-column to 2-column to 1-column layout :contentReference[oaicite:3]{index=3}:contentReference[oaicite:4]{index=4} */
+    @media (max-width: 992px) {
+      .intro-points .intro-point,
+      .process-steps .process-step {
+        flex: 1 1 calc((100% - 30px) / 2); /* 2 columns */
+      }
+      .sample-links {
+        flex-direction: row;
+      }
+      .sample-box {
+        flex: 1 1 30%;
+        max-width: 30%;
+      }
+    }
+    @media (max-width: 768px) {
+      .intro-points, .process-steps {
+        flex-direction: column;
+      }
+      .intro-points .intro-point,
+      .process-steps .process-step {
+        flex: 1 1 100%;
+      }
+      .sample-links {
+        flex-direction: column;
+        align-items: center;
+      }
+      .sample-box {
+        max-width: 250px;
+        width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Back Navigation to Homepage -->
-  <a href="index.html" class="back-to-home">&#8592; Back to Home</a>
-
-  <!-- Hero Section: Project Title and Hero Image -->
-  <section class="project-hero">
-    <h1 class="project-title">DIGIBOT</h1>
-    <!-- Hero image area (placeholder image) -->
-    <img src="images/digibot-hero.jpg" alt="DIGIBOT Hero Image" />
-  </section>
-
-  <!-- Overview Section: Project description -->
-  <section class="project-overview">
-    <h2>Overview</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vel dolor sit amet 
-       urna sollicitudin tristique. Proin at turpis ut neque placerat dignissim non vitae purus. 
-       Nulla facilisi. Vivamus aliquet, purus nec ultricies pretium, lorem urna sagittis tortor, 
-       non posuere orci augue vel ligula. Suspendisse potenti.</p>
-    <p>Ut faucibus, felis non cursus scelerisque, sapien elit fermentum eros, in aliquet elit orci 
-       id mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia 
-       curae; Sed accumsan libero ac neque faucibus, a faucibus metus facilisis. Aenean volutpat 
-       erat at purus commodo, vitae fermentum velit pretium. Donec tincidunt ligula eget magna 
-       fermentum blandit.</p>
-  </section>
-
-  <!-- Tools Used Section: List of tools/technologies -->
-  <section class="project-tools">
-    <h2>Tools Used</h2>
-    <ul>
-      <li>Figma</li>
-      <li>UX Research</li>
-      <li>User Interviews</li>
-      <li>Prototyping</li>
-    </ul>
-  </section>
-
-  <!-- Case Study Grid Section: Placeholder images in a grid layout -->
-  <section class="project-case-study">
-    <h2>Case Study</h2>
-    <div class="case-study-grid">
-      <img src="images/digibot-case1.jpg" alt="DIGIBOT case study image 1" />
-      <img src="images/digibot-case2.jpg" alt="DIGIBOT case study image 2" />
-      <img src="images/digibot-case3.jpg" alt="DIGIBOT case study image 3" />
-      <img src="images/digibot-case4.jpg" alt="DIGIBOT case study image 4" />
+  <!-- Hero/Header section with placeholder images -->
+  <header class="hero container">
+    <h1>DigiBot</h1>
+    <div class="hero-images">
+      <!-- Two gray placeholder boxes for hero images (replace src with actual images) -->
+      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAIAAAACUFjqAAAAFUlEQVR4nGM8c+YMA27AhEduBEsDAO3Aw1nGZ0cAAAAASUVORK5CYII=" alt="DigiBot hero image 1 (placeholder)">
+      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAIAAAACUFjqAAAAFUlEQVR4nGM8c+YMA27AhEduBEsDAO3Aw1nGZ0cAAAAASUVORK5CYII=" alt="DigiBot hero image 2 (placeholder)">
     </div>
+  </header>
+
+  <!-- Introduction section: About the App, Package I Offer, Package Inclusion -->
+  <section class="introduction container">
+    <div class="intro-points">
+      <div class="intro-point">
+        <h3>About the App</h3>
+        <p>Brief introduction about the DigiBot app. *(Placeholder text to be replaced with actual description.)*</p>
+      </div>
+      <div class="intro-point">
+        <h3>Package I Offer</h3>
+        <p>Overview of the service/package provided for this project. *(Placeholder text for now.)*</p>
+      </div>
+      <div class="intro-point">
+        <h3>Package Inclusion</h3>
+        <ul>
+          <li>Inclusion item one</li>
+          <li>Inclusion item two</li>
+          <li>Inclusion item three</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- Process section: Research, Implementation, Design (with line-style icons) -->
+  <section class="process container">
+    <h2 class="section-title">Process</h2>
+    <div class="process-steps">
+      <div class="process-step">
+        <!-- Example line-style icon (using Bootstrap Icons) -->
+        <i class="bi bi-search"></i>
+        <h3>Research</h3>
+        <p>Conducted initial research and planning.</p>
+      </div>
+      <div class="process-step">
+        <i class="bi bi-gear"></i>
+        <h3>Implementation</h3>
+        <p>Developed and implemented core features.</p>
+      </div>
+      <div class="process-step">
+        <i class="bi bi-pencil"></i>
+        <h3>Design</h3>
+        <p>Crafted UI/UX and visual design elements.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Design Samples section: Branding, Wireframe, Site -->
+  <section class="design-samples container">
+    <h2 class="section-title">Design Samples</h2>
+    <!-- Clickable category boxes -->
+    <div class="sample-links">
+      <a href="#branding-preview" class="sample-box">Branding</a>
+      <a href="#wireframe-preview" class="sample-box">Wireframe</a>
+      <a href="#site-preview" class="sample-box">Site</a>
+    </div>
+    <!-- Hidden/Scrolled design preview images (placeholders) -->
+    <div class="sample-previews">
+      <div id="branding-preview" class="sample-preview">
+        <h4>Branding Design</h4>
+        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAIAAAACUFjqAAAAFUlEQVR4nGM8c+YMA27AhEduBEsDAO3Aw1nGZ0cAAAAASUVORK5CYII=" alt="Branding design sample (placeholder)">
+      </div>
+      <div id="wireframe-preview" class="sample-preview">
+        <h4>Wireframe Design</h4>
+        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAIAAAACUFjqAAAAFUlEQVR4nGM8c+YMA27AhEduBEsDAO3Aw1nGZ0cAAAAASUVORK5CYII=" alt="Wireframe design sample (placeholder)">
+      </div>
+      <div id="site-preview" class="sample-preview">
+        <h4>Final Site Design</h4>
+        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAIAAAACUFjqAAAAFUlEQVR4nGM8c+YMA27AhEduBEsDAO3Aw1nGZ0cAAAAASUVORK5CYII=" alt="Site design sample (placeholder)">
+      </div>
+    </div>
+  </section>
+
+  <!-- Prototype section -->
+  <section class="prototype container">
+    <h2>Prototype</h2>
+    <!-- Gray placeholder box for prototype content (e.g., video or interactive embed) -->
+    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAIAAAACUFjqAAAAFUlEQVR4nGM8c+YMA27AhEduBEsDAO3Aw1nGZ0cAAAAASUVORK5CYII=" alt="DigiBot prototype preview (placeholder)">
   </section>
 
 </body>
